# Pawchestrator

./: .gitignore  CONTEXT.md  LICENSE  Pawchestrator.user.js  Pawchestrator_PRD.md  README.md  eslint.config.js  install.ps1  install.sh  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
.pawchestrator/: verify.toml
docs/: cli.md  configuration.md  troubleshooting.md  userscript.md
pawchestrator/: __init__.py  approval_gate.py  checkbox.py  cli.py  codegraph.py  config.py  db.py  doctor.py  epic.py  epic_architect.py  epic_scout.py  github.py  grill.py  implement.py  issues.py  lifecycle.py  models.py  pipeline.py  plan.py  pr.py  review.py  review_issues.py  review_post.py  run_clean.py  run_events.py  run_lifecycle.py  runners.py  scout.py  server.py  sessions.py  skill_loader.py  stage_fallback.py  stage_lifecycle.py  stream_tokens.py  verify.py
src/: api.ts  constants.ts  controls.ts  main.ts  navigation.ts  poll.ts  router.ts  state.ts  styles.ts  summarize.ts
tests/: test_checkbox.py  test_cli.py  test_cli_run_show.py  test_codegraph.py  test_config.py  test_db.py  test_db_lifecycle.py  test_doctor.py  test_epic.py  test_epic_architect.py  test_epic_scout.py  test_github.py  test_grill.py  test_implement.py  test_issue_snapshot.py  test_pipeline.py  test_plan.py  test_pr.py  test_repair.py  test_resume_pending_approvals.py  test_review.py  test_review_issue_format.py  test_review_issues_stage.py  test_review_post.py  test_run_clean.py  test_runners.py  test_scout.py  test_server.py  test_server_issue_status.py  test_sessions.py  (+6 more)
(+46 files in other folders)
