[project]
name = "pawchestrator"
version = "0.1.0"
description = "Local-first GitHub-native agent orchestration backend."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.20.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.6.0",
  "typer>=0.12.0",
  "uvicorn>=0.30.0",
]

[project.scripts]
pawchestrator = "pawchestrator.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--basetemp=.pytest_tmp"
